--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">末咕</string>
-    <string name="title_resource">資源</string>
-    <string name="title_gameTool">工具</string>
-    <string name="title_me">我</string>
+    <string name="app_name">EndFamily</string>
 </resources>
